--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,10 @@
 @charset "utf-8";
 /* CSS Document */
 
+* {
+  box-sizing: border-box;
+}
+
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
@@ -40,7 +44,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   min-height: 100%;
 }
 #footer {
-  background-color: #444;
+  background-color: #252831;
   color: #aaa;
   font-size: 8pt;
   letter-spacing: 1px;
@@ -51,7 +55,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 80px;
+  padding: 20px 0;
   background-color: #252831;
   text-align:center;
 }
@@ -71,7 +75,6 @@ nav h1 a {
     background-color: #eee;
     font-size: 17px;
     margin: 0;
-    width: calc(50% - 80px);
 }
 
 /* Display list items side by side */
@@ -103,19 +106,26 @@ nav h1 a {
   width: 100%;
   background-color: #ccc;
 }
+
+#map *:focus {
+  outline: 1px solid #f00 !important;
+}
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
-  background-color: #3397DB;
+  background-color: #252831;
+  min-height: 50px;
+  padding: 10px 30px 0;
   align-items: center;
+  display: flex;
+  flex-wrap: wrap;
 }
 .filter-options h2 {
   color: white;
   font-size: 1rem;
   font-weight: normal;
   line-height: 1;
-  margin: 0 20px;
+  margin: 5px 2px;
 }
 .filter-options select {
   background-color: white;
@@ -124,9 +134,9 @@ nav h1 a {
   font-size: 11pt;
   height: 35px;
   letter-spacing: 0;
-  margin: 10px;
+  margin: 10px 2px;
   padding: 0 10px;
-  width: 200px;
+  width: 100%;
 }
 
 /* ====================== Restaurant Listing ====================== */
@@ -136,6 +146,9 @@ nav h1 a {
   margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 #restaurants-list li {
   background-color: #fff;
@@ -143,16 +156,15 @@ nav h1 a {
   font-family: Arial,sans-serif;
   margin: 15px;
   min-height: 380px;
-  padding: 0 30px 25px;
+  padding: 10px;
   text-align: left;
-  width: 270px;
+  width: 100%;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
   margin: 0;
   max-width: 100%;
-  min-height: 248px;
   min-width: 100%;
 }
 #restaurants-list li h1 {
@@ -191,11 +203,10 @@ nav h1 a {
 }
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
+  height: 100vh;
+  width: 100%;
   right: 0;
   top: 80px;
-  width: 50%;
 }
 .inside #map {
   background-color: #ccc;
@@ -205,7 +216,7 @@ nav h1 a {
 .inside #footer {
   bottom: 0;
   position: absolute;
-  width: 50%;
+  width: 100%;
 }
 #restaurant-name {
   color: #f18200;
@@ -218,7 +229,8 @@ nav h1 a {
   line-height: 1.1;
 }
 #restaurant-img {
-	width: 90%;
+	width: 100%;
+  height: auto;
 }
 #restaurant-address {
   font-size: 12pt;
@@ -234,13 +246,12 @@ nav h1 a {
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
 }
-#restaurant-container, #reviews-container {
+#restaurant-container,
+#reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
+  padding: 40px 40px 30px;
 }
 #reviews-container {
   padding: 30px 40px 80px;
@@ -258,18 +269,106 @@ nav h1 a {
 }
 #reviews-list li {
   background-color: #fff;
-    border: 2px solid #f3f3f3;
+  border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
   margin: 0 0 30px;
   overflow: hidden;
   padding: 0 20px 20px;
   position: relative;
-  width: 85%;
+  border-radius: 15px 0 15px 0;
 }
 #reviews-list li p {
   margin: 0 0 10px;
 }
+#reviews-list li p:nth-child(3) {
+  text-transform: uppercase;
+  background-color: #fea411;
+  display: inline-block;
+  padding: 5px 10px;
+  border-radius: 2px;
+  color: #323232;
+  font-weight: bold;
+  margin-top: 60px;
+}
+.name {
+  background: #323232;
+  color: #fff;
+  position: absolute;
+  width: 100%;
+  left: 0;
+  padding: 10px 15px;
+  font-size: 1.1rem;
+}
+.date {
+  float: right;
+  position: relative;
+  z-index: 10;
+  color: #fff;
+  padding-top: 14px;
+  color: #ddd;
+}
+#restaurant-hours th {
+  text-align: left;
+  padding-right: 10px;
+}
 #restaurant-hours td {
   color: #666;
+}
+
+
+
+@media screen and (min-width: 601px) {
+  /* ====================== Restaurant Listing ====================== */
+  #restaurants-list li {
+    width: calc(50% - 30px);
+  }
+
+
+  /* ====================== Restaurant Filtering ====================== */
+  .filter-options {
+    padding-top: 0;
+  }
+  .filter-options select {
+    width: auto;
+    margin: 0 15px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  /* ====================== Restaurant Details ====================== */
+  .inside #map-container {
+    position: fixed;
+  }
+
+  #restaurant-container {
+    padding-bottom: 50px;
+  }
+
+  #breadcrumb,
+  .inside #map-container,
+  .inside #restaurant-container,
+  #reviews-container,
+  .inside #footer {
+    width: 50%;
+  }
+
+  #restaurant-container {
+    padding-top: 140px;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  /* ====================== Restaurant Listing ====================== */
+  #restaurants-list li {
+    width: calc(33.33% - 30px);
+  }
+}
+
+
+@media screen and (min-width: 1440px) {
+  /* ====================== Restaurant Listing ====================== */
+  #restaurants-list li {
+    width: calc(16.66% - 30px);
+  }
 }
